src/components/Header/Header.module.css
.headerSectionContainer {
    width: 100%;
    position: relative;
    z-index: 1111;
}

.header {
    width: 100%;
    top: 0;
    display: flex;
    justify-content: space-between;
    align-items: top;
    padding: 10px 30px;
    box-sizing: border-box;
    position: fixed;
    background-color: #ffffff;
    height: 180px;
}

/* Adding the separator line with ::after */
.header::after {
    content: "";
    display: block;
    width: 100%;
    height: 1px; /* Line thickness */
    background-color: rgba(0, 0, 0, 0.115); /* Line color */
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 1001;
}

.airbnbHomeButton {
    display: flex;
    align-items: top;
    cursor: pointer;
}

.logoAirbnb {
    height: 60px;
    width: 80px;
}

.userMenusWrapper {
    display: flex;
    align-items: top;
    margin-top: 10px;
    margin-right: 20px;
}

